overflow-x problem solved

--- a/src/Components/Package/Package.css
+++ b/src/Components/Package/Package.css
@@ -222,3 +222,7 @@ PackageDetails.css
 .content *{
   color: #ffffff;
 }
+
+body{
+  overflow-x: hidden;
+}
